[Bug 357172] mail invitation text garbled (VCALENDAR not recognized as UTF-8) Most notible a problem with outlook, which uses utf-8 calendar invitations, but does not specify charset. r+sr=bienvenu, p=Christian Schmidt<bugzilla.mozilla.org-1@chsc.dk>